Request Demo Button Solutions Page fix z-index

--- a/assets/css/partials/_solutions.scss
+++ b/assets/css/partials/_solutions.scss
@@ -14,6 +14,10 @@
             border-radius: 10px;
         }
     }
+
+    .content.page-overview {
+        z-index: 9999;
+    }
 }
 
 #curtain-slider__solutions {
